--- a/cmd/resources/resource_cmds.tmpl
+++ b/cmd/resources/resource_cmds.tmpl
@@ -2,8 +2,41 @@
 
 package resources
 
-func main() {
-	{{ range $resName, $resData := .Resources }}
-    // {{ (printf "%s"  $resName)  }} would go here
-	{{ end }}
+import (
+	"github.com/spf13/cobra"
+
+	"ldcli/internal/analytics"
+	"ldcli/internal/resources"
+)
+
+func AddAllResourceCmdsGen(rootCmd *cobra.Command, client resources.Client, analyticsTracker analytics.Tracker) {
+	// Resource commands{{ range $resName, $resData := .Resources }}
+	gen_{{ $resName }}ResourceCmd := NewResourceCmd(
+        rootCmd,
+        analyticsTracker,
+        "{{ $resData.Name }}",
+        "Make requests (list, create, etc.) on {{ $resData.Name }}",
+        {{ $resData.Description }},
+    )
+    {{ end }}
+
+    // Operation commands{{ range $resName, $resData := .Resources }}{{ range $opName, $opData := $resData.Operations }}
+    NewOperationCmd(gen_{{ $resName }}ResourceCmd, client, OperationData{
+            Short: "{{ $opData.Short }}",
+            Long:  {{ $opData.Long }},
+            Use:   "{{ $opData.Use }}",
+            Params: []Param{ {{ range $param := $opData.Params }}
+                {
+                    Name:        "{{ $param.Name }}",
+                    In:          "{{ $param.In }}",
+                    Description: {{ $param.Description }},
+                    Type:        "{{ $param.Type }}",
+                }, {{ end }}
+            },
+            HTTPMethod:   "{{ $opData.HTTPMethod }}",
+            RequiresBody: {{ $opData.RequiresBody }},
+            Path:         "{{ $opData.Path }}",
+        })
+
+	{{ end }}{{ end }}
 }
