get generate working with remaining open api spec

--- a/cmd/resources/resource_cmds.tmpl
+++ b/cmd/resources/resource_cmds.tmpl
@@ -15,7 +15,7 @@ func AddAllResourceCmdsGen(rootCmd *cobra.Command, client resources.Client, anal
         rootCmd,
         analyticsTracker,
         "{{ $resData.Name }}",
-        "Make requests (list, create, etc.) on {{ $resData.Name }}",
+        "Make requests (list, create, etc.) on {{ $resData.DisplayName }}",
         {{ $resData.Description }},
     )
     {{ end }}
